fix: update tour image start time location